storage/innobase/include/srv0srv.h
@@ -888,22 +888,16 @@ ulint
 srv_get_task_queue_length(void);
 /*===========================*/
 
-/*********************************************************************//**
-Releases threads of the type given from suspension in the thread table.
-NOTE! The server mutex has to be reserved by the caller!
-@return number of threads released: this may be less than n if not
-enough threads were suspended at the moment */
-ulint
-srv_release_threads(
-/*================*/
-	enum srv_thread_type	type,	/*!< in: thread type */
-	ulint			n);	/*!< in: number of threads to release */
-
-/**********************************************************************//**
-Wakeup the purge threads. */
+/** Ensure that a given number of threads of the type given are running
+(or are already terminated).
+@param[in]	type	thread type
+@param[in]	n	number of threads that have to run */
 void
-srv_purge_wakeup(void);
-/*==================*/
+srv_release_threads(enum srv_thread_type type, ulint n);
+
+/** Wakeup the purge threads. */
+void
+srv_purge_wakeup();
 
 /** Check if tablespace is being truncated.
 (Ignore system-tablespace as we don't re-create the tablespace
